# loan_repayment

./: .gitignore  LICENSE  README.md  project_overview.md  pyproject.toml
notebooks/: analysis.ipynb  analysis_run2.ipynb  wrangling.ipynb
src/loan_repayment/: __init__.py  version.py
src/loan_repayment/etl/: __init__.py  data_flow.py  extraction.py  integrity_checks.py  transformations.py
